--- a/todo.txt
+++ b/todo.txt
@@ -6,3 +6,6 @@ Add a calculator.
 Add sound and speech feedback for hiding/unhiding the window, and for exiting.
 Make alt+f4 not close the app, just hide it.
 Add a sys tray icon.
+Add changelog to docs
+Add much more to docs
+Add twishort
