--- a/todo.txt
+++ b/todo.txt
@@ -7,4 +7,4 @@ Add much more to docs
 Add twishort
 Add a spell checker.
 Add Synonyms and antonyms (but PyDictionary seems to be broken when it comes to this).
-Add error checking for if PyDictionary doesn't find any words.
+Make it impossible to enter a blank word in the word definer.
